feat: add support for directors